--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "mt3d-plugin-fireworks",
-  "version": "0.1.0-SNAPSHOT",
+  "version": "0.1.0",
   "description": "Fireworks plugin for Mini Tokyo 3D",
   "main": "dist/mt3d-plugin-fireworks.js",
   "module": "dist/mt3d-plugin-fireworks.esm.js",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-image": "^2.1.1",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-strip": "^2.1.0",
     "eslint": "^7.32.0",
     "eslint-config-mourner": "^3.0.0",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsdoc": "^36.0.8",
-    "mini-tokyo-3d": "^3.0.0-beta.1",
-    "rollup": "^2.56.3",
+    "eslint-plugin-jsdoc": "^36.1.0",
+    "mini-tokyo-3d": "^3.0.0-beta.2",
+    "rollup": "^2.58.0",
     "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
-    "mini-tokyo-3d": "^3.0.0-beta.1"
+    "mini-tokyo-3d": "^3.0.0-beta.2"
   },
   "scripts": {
     "build": "rollup -c",
