--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mt3d-plugin-fireworks",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "Fireworks plugin for Mini Tokyo 3D",
   "main": "dist/mt3d-plugin-fireworks.js",
   "module": "dist/mt3d-plugin-fireworks.esm.js",
@@ -8,18 +8,18 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-image": "^2.1.1",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-strip": "^2.1.0",
-    "eslint": "^8.2.0",
+    "eslint": "^8.8.0",
     "eslint-config-mourner": "^3.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsdoc": "^37.0.3",
-    "mini-tokyo-3d": "^3.0.0-rc.1",
-    "rollup": "^2.60.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsdoc": "^37.8.2",
+    "mini-tokyo-3d": "^3.0.0",
+    "rollup": "^2.67.2",
     "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
-    "mini-tokyo-3d": "^3.0.0-rc.1"
+    "mini-tokyo-3d": "^3.0.0"
   },
   "scripts": {
     "build": "rollup -c",
