--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
   "name": "mt3d-plugin-fireworks",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Fireworks plugin for Mini Tokyo 3D",
   "main": "dist/mt3d-plugin-fireworks.js",
   "module": "dist/mt3d-plugin-fireworks.esm.js",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-image": "^2.1.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-strip": "^2.1.0",
-    "eslint": "^8.23.0",
+    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-image": "^3.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-strip": "^3.0.2",
+    "@rollup/plugin-terser": "^0.4.1",
+    "eslint": "^8.38.0",
     "eslint-config-mourner": "^3.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.6",
-    "mini-tokyo-3d": "^3.1.0",
-    "rollup": "^2.78.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^41.1.1",
+    "mini-tokyo-3d": "^3.3.0",
+    "rollup": "^3.20.2"
   },
   "peerDependencies": {
-    "mini-tokyo-3d": "^3.1.0"
+    "mini-tokyo-3d": "^3.3.0"
   },
   "scripts": {
     "build": "rollup -c",
